<resources>
    <string name="app_name">FireBots</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="login_progress">Loading</string>
    <string name="login_fail">Login Fail</string>
    <string name="network_error">Network Error</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="start_chat">Start Chat</string>
    <string name="chat">Chat</string>
    <string name="unread_message_below">Unread message below</string>
    <string name="chat_welcome_text">Welcome</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="send">Send</string>
    <string name="read">Read</string>
    <string name="loading">Loading</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="pick_image_from">Pick Image Form</string>
    <string name="uploading">Uploading</string>
    <string name="image_upload_failed">Image Upload Fail</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="downloaded">Downloaded</string>
    <string name="failed">Failed</string>
    <string name="paused">Paused</string>
    <string name="running">Running</string>
    <string name="copy">Copy</string>
</resources>
