<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <com.mobcomlab.firebots.Views.TextViewTitle
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="40sp"/>

    <com.mobcomlab.firebots.Views.EditTextNormal
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/transparent"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingEnd="5dp"
        android:paddingLeft="24dp"
        android:paddingRight="5dp"
        android:paddingStart="24dp"
        android:textColor="@color/textNormal"
        android:textColorHint="@color/textUnselected"
        android:textSize="15sp"
        android:windowSoftInputMode="adjustResize" />

    <com.mobcomlab.firebots.Views.ButtonMedium
        android:id="@+id/login_button"
        style="@style/Button.Response"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:text="@string/login" />

</LinearLayout>