<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:id="@+id/image_preview_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_preview_save"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:src="@android:drawable/ic_menu_save"
                android:contentDescription="@string/save"
                android:scaleType="centerCrop"
                android:paddingTop="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/save"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_preview_share"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:src="@android:drawable/ic_menu_share"
                android:contentDescription="@string/share"
                android:scaleType="centerCrop"
                android:paddingTop="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/share"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>